--- a/src/less/jmylottery.less
+++ b/src/less/jmylottery.less
@@ -4,6 +4,9 @@
   border: 1px solid #ccc;
   font-family: verdana, arial, helvetica, sans-serif;
   position: relative;
+  line-height: normal;
+  font-size: 14px;
+  margin-bottom: 68px;
 
   .help {
     border-bottom: 1px solid #eee;
@@ -14,6 +17,7 @@
       color: #636363;
       padding: 10px;
       margin: 0;
+      line-height: normal;
       &.green {
         color: green;
       }
@@ -36,6 +40,8 @@
         padding: 10px;
         background-color: #eee;
         float: left;
+        line-height: normal;
+        font-size: 16px;
         margin-right: 10px;
         text-decoration: none;
         color: #636363;
@@ -124,6 +130,7 @@
     tr td {
       border: 1px solid #ccc;
       width: 10%;
+      padding: 0;
     }
   }
 
